--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,10 @@
   <%= render 'layouts/header' %>
 
     <%= yield %>
+
   <%= render 'layouts/footer' %>
+
+  <%= debug(params) if Rails.env.development? %>
   </body>
 
 
