--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,22 @@
 <% provide(:title, "Sign up") %>
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Sign Up</h1>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+  <%= form_for @user do |t| %>
+      <%= render 'shared/error_messages' %>
+    <%= t.label :name %>
+      <%= t.text_field :name ,  autofocus: true, class: "form-control" %>
+      <%= render 'shared/error_message_item', locals:{find_error_for:/\AName/}%>
+      <%= t.label :email %>
+      <%= t.text_field :email, class: "form-control" %>
+      <%= render 'shared/error_message_item', locals:{find_error_for:/\AEmail/}%>
+      <%= t.label :password %>
+      <%= t.password_field :password, class: "form-control" %>
+      <%= render 'shared/error_message_item', locals:{find_error_for:/\APassword (must|is|can't)/}%>
+      <%= t.label :password_confirmation %>
+      <%= t.password_field :password_confirmation, class: "form-control" %>
+      <%= render 'shared/error_message_item', locals:{find_error_for:/\APassword confirmation/}%>
+      <%= t.submit "Create my account", class:"btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
