--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= render 'layouts/shim' %>
 
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", media: 'all',"data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
