--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
                 <li><%= link_to "Profile", current_user %></li>
                 <li><%= link_to "Settings","#" %></li>
                 <li class="dropdown-divider"></li>
-                <li><%= link_to "LOG OUT", logout_path, method: "delete" %></li>
+                <li><%= link_to "LOG OUT", logout_path, data: {method: :delete, confirm: "Are you sure?"} %></li>
               </ul>
             </li>
           <% else %>
