--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
 <h1>Sign Up</h1>
 <div class="row">
   <div class="col-md-6 offset-md-3">
+    <% return if @user.nil? %>
   <%= form_for @user do |t| %>
       <%= render 'shared/error_messages' %>
     <%= t.label :name %>
