--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -171,10 +171,37 @@ input, textarea, select, .uneditable-input {
     margin: 0 0 30px 0;
   }
 }
+.alert-success_notice, .alert-danger_notice{
+  display: inline-block;
+  background-color: #252525;
+  font-size: large;
+  text-transform: capitalize;
+  content: '\2710';
+  color:orange;
+  padding: 10px;
+  border: 2px dotted darkorange;
+}
+.alert-danger_notice{
+  background-color: lightcoral;
+  font-weight: 800;
+  color: black;
+  border-color: black;
+  font-size: xx-large;
+}
 .field_with_errors {
   @extend .has-error !optional;
   .form-control {
     color: darkred;
   }
 
+}
+/* Список пользователей */
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-400;
+  }
 }
