--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,14 @@
           <li class="nav-item "><%=link_to "HOME", home_path %></li>
           <li class="nav-item "><%=link_to "HELP", help_path %></li>
           <% if logged_in? %>
-            <li class="nav-item"><%=link_to "USERS", '#' %></li>
+            <li class="nav-item"><%=link_to "USERS", users_path %></li>
             <li class="nav-item  dropdown">
                 <a href="#" class="nav-item dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                   Account<b class="bi bi-person"></b>
                 </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings","#" %></li>
+                <li><%= link_to "Settings",edit_user_path(current_user) %></li>
                 <li class="dropdown-divider"></li>
                 <li><%= link_to "LOG OUT", logout_path, data: {method: :delete, confirm: "Are you sure?"} %></li>
               </ul>
