--- a/app/views/shared/_error_message_item.html.erb
+++ b/app/views/shared/_error_message_item.html.erb
@@ -1,6 +1,6 @@
-<% if @user.errors.messages.any? %>
+<% if object.errors.messages.any? %>
   <ul id="error_explanation">
-    <% @user.errors.full_messages.each do |m| %>
+    <% object.errors.full_messages.each do |m| %>
       <% if m.match?(locals[:find_error_for])  %>
         <li><%= m %></li>
       <% end %>
