--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
-  <% if @user.errors.any? %>
+<% if object.errors.any? %>
 
     <div class = "alert alert-danger">
-        The form contents <%= pluralize(@user.errors.count, "error") %>
+        The form contents <%= pluralize(object.errors.count, "error") %>
     </div>
 
 <% end %>
