--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,6 @@
   <%= gravatar_for user, size: 50 %>
   <%= link_to user.name, user %>
   <% if current_user.admin? && !current_user?(user) %>
-     <%= link_to "delete", user, method: :delete,
-                  data: { confirm: "\nDelete user: #{user.name.upcase}?\n\n Are you sure?" } %>
+     <%= link_to "delete", user, data: { turbo_method: "delete",  turbo_confirm: "\nDelete user: #{user.name.upcase}?\n\n Are you sure?" } %>
   <% end %>
 </li>
