--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -10,6 +10,7 @@ Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     <% if current_user?(micropost.user) %>
     <%= link_to "delete", micropost, method: :delete,
                 data: { confirm: "You sure?" } %>
+      <%= button_to "DELETE", micropost, method: :delete , class: "btn btn-primary"%>
       <% end %>
 </span>
 </li>
