--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbo-track': 'reload' %>
     <%= javascript_importmap_tags %>
-    <%= javascript_import_module_tag "jquery" %>
+    <%= yield :head %>
+
 
   </head>
 
