--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -12,12 +12,9 @@
 <% end %>
 
 
-
+<% content_for :head do %>
+  <%= javascript_import_module_tag "cut_image" %>
+<% end %>
 <script type="text/javascript">
-    $('#micropost_picture').bind('change', function() {
-        size_in_megabytes = this.files[0].size/1024/1024;
-        if (size_in_megabytes > 5) {
-            alert('Maximum file size is 5MB. Please choose a smaller file.');
-        }
-    });
+
 </script>
