adding turbo_frame_tag to the _micropost_form

--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,4 +1,4 @@
-
+<%= turbo_frame_tag "micropost" do %>
 <%= form_for(@micropost, html: { multipart: true }) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
@@ -10,11 +10,8 @@
      <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
   </span>
 <% end %>
-
+<% end %>
 
 <% content_for :head do %>
   <%= javascript_import_module_tag "cut_image" %>
 <% end %>
-<script type="text/javascript">
-
-</script>
