--- a/app/views/shared/_home_logged.html.erb
+++ b/app/views/shared/_home_logged.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag "micropost" do %>
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
@@ -15,3 +16,4 @@
     <%= render 'shared/feed' %>
   </div>
 </div>
+<%= end %>
