--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag "feed_items" %>
 <% if @feed_items.any? %>
   <ol class="microposts">
     <%= render @feed_items %>
@@ -5,5 +6,5 @@
   <div class="digg_pagination">
     <%= will_paginate @feed_items %>
   </div>
-
 <% end %>
+<%= end %>
