--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -9,9 +9,9 @@
   <span class="timestamp">
 Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     <% if current_user?(micropost.user) %>
-    <%= link_to "delete", micropost, data: { turbo_method: "delete",
+    <%= link_to "soft delete", micropost, data: { turbo_method: "delete",
                                              turbo_confirm: "\nDelete post: #{micropost.content}?\n\n Are you sure?" }  %>
-      <%= button_to "DELETE", micropost, method: :delete , class: "btn btn-primary"%>
+      <%= button_to "FORCE DELETE", micropost, method: :delete , class: "btn btn-primary"%>
       <% end %>
 </span>
 </li>
