--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "micropost" do %>
+<%= turbo_frame_tag "@micropost" do %>
 <%= form_for(@micropost, html: { multipart: true }) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
